# sa-copilot-api

./: .env.example  .gitignore  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py
app/controllers/: __init__.py  jira.py
app/models/: __init__.py  jira.py
app/routers/: jira.py
app/services/: __init__.py
app/services/ai/: __init__.py  agno_service.py  base.py  mock.py  provider.py  schemas.py
app/services/ai/agno/: prompts.py  run.py  schemas.py  service.py
app/services/ai/agno/mcp_plugins/: __init__.py  amplitude_docs.py  braze_docs.py  plugin.py  registry.py
app/use_cases/jira/: handle_comment_created.py  handle_issue_created.py  handle_issue_updated.py
app/utils/: content.py
docs/: SPECS.md
